--- a/profile.html
+++ b/profile.html
@@ -1,14 +1,116 @@
 <!DOCTYPE html><html><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>SeaConnect</title><style>
-body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;background:linear-gradient(180deg,#0f172a,#1e293b);color:#f1f5f9;}
-.page{display:none;padding:20px;padding-bottom:95px;}
-.card{background:rgba(255,255,255,0.06);backdrop-filter:blur(12px);border:1px solid rgba(255,255,255,0.08);padding:18px;border-radius:22px;margin-bottom:16px;box-shadow:0 10px 30px rgba(0,0,0,.35);}
-input{width:100%;padding:12px;border-radius:14px;border:1px solid rgba(255,255,255,0.15);margin-top:6px;box-sizing:border-box;background:rgba(255,255,255,0.05);color:#fff;}
-button{padding:11px 16px;border:none;border-radius:14px;font-weight:700;cursor:pointer;transition:all .2s ease;}
-.primary{background:linear-gradient(135deg,#3b82f6,#2563eb);color:#fff;}
-.danger{background:linear-gradient(135deg,#ef4444,#dc2626);color:#fff;}
-.light{background:rgba(255,255,255,0.1);color:#fff;}
-.row{display:flex;gap:10px;margin-top:12px;}
-.row > button{flex:1;}
+body{
+margin:0;
+font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
+background:#f3f4f6;
+color:#111;
+}
+
+/* HEADER (same as messages) */
+.header{
+display:flex;
+align-items:center;
+justify-content:space-between;
+padding:16px;
+background:white;
+border-bottom:1px solid #e5e7eb;
+font-weight:900;
+font-size:20px;
+}
+
+.header button{
+border:none;
+background:none;
+font-size:16px;
+font-weight:900;
+cursor:pointer;
+color:#ef4444;
+}
+
+/* PAGE */
+.page{
+padding:12px;
+padding-bottom:95px;
+}
+
+/* CARD (same style as message list) */
+.card{
+background:white;
+padding:16px;
+border-radius:14px;
+margin-bottom:12px;
+box-shadow:0 2px 8px rgba(0,0,0,.05);
+}
+
+input{
+width:100%;
+padding:12px;
+border-radius:12px;
+border:1px solid #ddd;
+margin-top:6px;
+box-sizing:border-box;
+background:white;
+color:#111;
+}
+
+/* BUTTONS */
+
+button{
+padding:10px 14px;
+border:none;
+border-radius:12px;
+font-weight:700;
+cursor:pointer;
+}
+
+.primary{
+background:#2563eb;
+color:white;
+}
+
+.danger{
+background:#ef4444;
+color:white;
+}
+
+.light{
+background:#e5e7eb;
+color:#111;
+}
+
+/* PROFILE IMAGE */
+
+.profileWrapper{
+display:inline-block;
+padding:4px;
+border-radius:50%;
+background:linear-gradient(45deg,#22c55e,#16a34a);
+box-shadow:0 0 20px rgba(34,197,94,0.6);
+}
+
+.profileWrapper img{
+width:120px;
+height:120px;
+border-radius:50%;
+object-fit:cover;
+}
+
+/* TEXT */
+.subText{
+font-size:13px;
+color:#6b7280;
+margin-top:8px;
+}
+
+.row{
+display:flex;
+gap:10px;
+margin-top:12px;
+}
+
+.row button{
+flex:1;
+}
 .subText{font-size:13px;color:#94a3b8;}
 .bottomnav{position:fixed;bottom:15px;left:50%;transform:translateX(-50%);width:90%;height:65px;background:rgba(15,23,42,0.9);backdrop-filter:blur(10px);border-radius:22px;display:flex;justify-content:space-around;align-items:center;box-shadow:0 10px 40px rgba(0,0,0,.6);}
 .bottomnav button{background:none;border:none;font-size:12px;font-weight:600;color:#94a3b8;}
@@ -16,20 +118,7 @@ button{padding:11px 16px;border:none;border-radius:14px;font-weight:700;cursor:p
 #profilePhoto{box-shadow:0 0 30px rgba(59,130,246,.5);}
 
 /* NEW: GREEN ONLINE RING */
-.profileWrapper{
-display:inline-block;
-padding:4px;
-border-radius:50%;
-background:linear-gradient(45deg,#22c55e,#16a34a);
-box-shadow:0 0 20px rgba(34,197,94,0.7);
-}
-.profileWrapper img{
-width:120px;
-height:120px;
-border-radius:50%;
-object-fit:cover;
-display:block;
-}
+
 </style></head><body>
 
 <!-- FEEDS PLACEHOLDER -->
@@ -53,9 +142,9 @@ display:block;
 <!-- PROFILE -->
 <div id="profilePage" class="page" style="display:block;">
 
-<div style="display:flex;justify-content:space-between;">
-<h2>👤 My Profile</h2>
-<button class="danger" onclick="logout()">Logout</button>
+<div class="header">
+<div>Profile</div>
+<button onclick="logout()">Logout</button>
 </div>
 
 <div class="card" style="text-align:center">
