--- a/profile.html
+++ b/profile.html
@@ -82,12 +82,7 @@ color:#111;
 
 .profileWrapper{
 display:inline-block;
-padding:4px;
-border-radius:50%;
-background:linear-gradient(45deg,#22c55e,#16a34a);
-box-shadow:0 0 20px rgba(34,197,94,0.6);
 }
-
 .profileWrapper img{
 width:120px;
 height:120px;
@@ -112,9 +107,28 @@ margin-top:12px;
 flex:1;
 }
 .subText{font-size:13px;color:#94a3b8;}
-.bottomnav{position:fixed;bottom:15px;left:50%;transform:translateX(-50%);width:90%;height:65px;background:rgba(15,23,42,0.9);backdrop-filter:blur(10px);border-radius:22px;display:flex;justify-content:space-around;align-items:center;box-shadow:0 10px 40px rgba(0,0,0,.6);}
-.bottomnav button{background:none;border:none;font-size:12px;font-weight:600;color:#94a3b8;}
-.bottomnav button.active{color:#3b82f6;font-weight:800;}
+.bottomnav{
+position:fixed;
+bottom:15px;
+left:50%;
+transform:translateX(-50%);
+width:90%;
+height:65px;
+background:#e5e7eb;
+border-radius:22px;
+display:flex;
+justify-content:space-around;
+align-items:center;
+box-shadow:0 4px 10px rgba(0,0,0,.08);
+}
+ .bottomnav button{
+background:none;
+border:none;
+font-size:12px;
+font-weight:600;
+color:#6b7280;
+}
+  .bottomnav button.active{color:#3b82f6;font-weight:800;}
 #profilePhoto{box-shadow:0 0 30px rgba(59,130,246,.5);}
 
 /* NEW: GREEN ONLINE RING */
