--- a/friends.html
+++ b/friends.html
@@ -81,16 +81,8 @@ border-radius:50%;
 object-fit:cover;
 }
 
-.onlineRing{
-position:absolute;
-top:0;
-left:0;
-width:50px;
-height:50px;
-border-radius:50%;
-border:2px solid #22c55e;
-pointer-events:none;
-}
+
+
 
 .bottomnav{
 position:fixed;
@@ -99,13 +91,12 @@ left:50%;
 transform:translateX(-50%);
 width:90%;
 height:65px;
-background:rgba(15,23,42,0.9);
-backdrop-filter:blur(10px);
+background:#e5e7eb;
 border-radius:22px;
 display:flex;
 justify-content:space-around;
 align-items:center;
-box-shadow:0 10px 40px rgba(0,0,0,.6);
+box-shadow:0 2px 10px rgba(0,0,0,.08);
 }
 
 .bottomnav button{
@@ -113,9 +104,8 @@ background:none;
 border:none;
 font-size:12px;
 font-weight:600;
-color:#94a3b8;
+color:#374151;
 }
-
 .bottomnav button.active{
 color:#3b82f6;
 font-weight:800;
@@ -241,7 +231,7 @@ incomingHTML+=`
 <div class="friendInfo">
 <div class="avatarWrapper">
 <img src="${userData?.photo || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}">
-<div class="onlineRing"></div>
+
 </div>
 <div style="font-weight:900;">${name}</div>
 </div>
@@ -256,9 +246,9 @@ if(status==="accepted"){
 friendsList.innerHTML+=`
 <div class="card friendRow">
 <div class="friendInfo">
+
 <div class="avatarWrapper">
 <img src="${userData?.photo || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}">
-<div class="onlineRing"></div>
 </div>
 <div style="font-weight:900;">${name}</div>
 </div>
