--- a/friends.html
+++ b/friends.html
@@ -9,112 +9,86 @@
 body{
 margin:0;
 font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
-background:linear-gradient(180deg,#0f172a,#1e293b);
-color:#f1f5f9;
+background:#f3f4f6;
+color:#111;
 }
 
-.container{
-padding:20px;
-padding-bottom:110px;
-}
-
-.card{
-background:rgba(255,255,255,0.06);
-backdrop-filter:blur(12px);
-border:1px solid rgba(255,255,255,0.08);
-padding:18px;
-border-radius:22px;
-margin-bottom:16px;
-box-shadow:0 10px 30px rgba(0,0,0,.35);
-}
-
-h2,h3{margin-top:0;}
-
-input{
-width:100%;
-padding:12px;
-border-radius:14px;
-border:1px solid rgba(255,255,255,0.15);
-background:rgba(255,255,255,0.05);
-color:#fff;
-margin-top:8px;
-}
-
-button{
-padding:8px 12px;
-border:none;
-border-radius:14px;
-font-weight:700;
-cursor:pointer;
-}
-
-.primary{background:linear-gradient(135deg,#3b82f6,#2563eb);color:#fff;}
-.light{background:rgba(255,255,255,0.1);color:#fff;}
-.danger{background:linear-gradient(135deg,#ef4444,#dc2626);color:#fff;}
-
-.row{display:flex;gap:6px;margin-top:6px;}
-.row button{flex:1;}
-
-.friendRow{
+/* HEADER */
+.header{
 display:flex;
-justify-content:space-between;
 align-items:center;
-margin-bottom:12px;
+gap:10px;
+padding:16px;
+background:white;
+border-bottom:1px solid #e5e7eb;
+font-weight:900;
+font-size:20px;
 }
 
-.friendInfo{
+.header button{
+border:none;
+background:none;
+font-size:26px;
+font-weight:900;
+cursor:pointer;
+color:#111;
+}
+
+/* LIST */
+.friendList{
+padding:12px;
+}
+
+/* FRIEND CARD */
+.friendItem{
+display:flex;
+align-items:center;
+justify-content:space-between;
+gap:12px;
+background:white;
+padding:14px;
+border-radius:14px;
+margin-bottom:10px;
+box-shadow:0 2px 8px rgba(0,0,0,.05);
+}
+
+.friendLeft{
 display:flex;
 align-items:center;
 gap:12px;
 }
 
-.avatarWrapper{
-position:relative;
-width:50px;
-height:50px;
-}
-
-.avatarWrapper img{
+/* AVATAR */
+.avatar{
 width:50px;
 height:50px;
 border-radius:50%;
 object-fit:cover;
 }
 
-
-
-
-.bottomnav{
-position:fixed;
-bottom:15px;
-left:50%;
-transform:translateX(-50%);
-width:90%;
-height:65px;
-background:#e5e7eb;
-border-radius:22px;
-display:flex;
-justify-content:space-around;
-align-items:center;
-box-shadow:0 2px 10px rgba(0,0,0,.08);
+/* NAME + RANK */
+.name{
+font-weight:900;
+font-size:15px;
 }
 
-.bottomnav button{
-background:none;
-border:none;
+.rank{
 font-size:12px;
-font-weight:600;
-color:#374151;
+color:#6b7280;
+margin-top:2px;
 }
-.bottomnav button.active{
-color:#3b82f6;
-font-weight:800;
+
+/* MESSAGE BUTTON */
+.messageBtn{
+background:#2563eb;
+color:white;
+padding:8px 12px;
+border-radius:10px;
+font-size:12px;
+font-weight:700;
+border:none;
+cursor:pointer;
 }
-</style>
-</head>
-
-<body>
-
 <div class="container">
 
 <h2>👥 Friends</h2>
@@ -129,7 +103,7 @@ font-weight:800;
 </div>
 
 <div id="friendsList"></div>
-
+<div id="friendList" class="friendList"></div>
 </div>
 
 <div class="bottomnav">
